--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="box">
                 <h3>contact info</h3>
-                <a href="mailto:info@alphacoffee.store"><i class="fas fa-envelope"></i>info@alphacoffee.store</a>
+                <a href="mailto:info@alphacoffee.store"><i class="fas fa-envelope"></i>support@alphacoffee.store</a>
                 <a href="#"><i class="fab fa-facebook-f"></i> facebook</a>
                 <a href="#"><i class="fab fa-instagram"></i> instagram</a>
             </div>
