--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 
             <div class="content">
                 <h3 class="title">what's make our coffee special!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rerum laboriosam reprehenderit ipsa id
-                    repellat odio illum, voluptas, necessitatibus assumenda adipisci. Hic, maiores iste? Excepturi illo
-                    dolore mollitia qui quia.</p>
+                <p>Our coffee stands out because we start with premium beans, carefully roasted to perfection. Each sip delivers a burst of freshness and a depth of flavor that you won't find anywhere else.</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons-container">
                     <div class="icons">
@@ -98,8 +96,8 @@
             <a href="#" class="box">
                 <img src="image/menu-1.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, sed.</p>
+                    <h3>Espresso</h3>
+                    <p>Rich and bold, our espresso is made from finely ground coffee beans brewed under high pressure..</p>
                     <span>$8.99</span>
                 </div>
             </a>
@@ -107,8 +105,8 @@
             <a href="#" class="box">
                 <img src="image/menu-2.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, fugit.</p>
+                    <h3>Cappuccino</h3>
+                    <p>A classic blend of espresso, steamed milk, and a frothy milk foam topping.</p>
                     <span>$8.99</span>
                 </div>
             </a>
@@ -116,8 +114,8 @@
             <a href="#" class="box">
                 <img src="image/menu-3.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, recusandae.</p>
+                    <h3>Latte</h3>
+                    <p>Smooth and creamy, our latte combines rich espresso with steamed milk and a light layer of foam..</p>
                     <span>$8.99</span>
                 </div>
             </a>
@@ -125,8 +123,8 @@
             <a href="#" class="box">
                 <img src="image/menu-4.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, quas.</p>
+                    <h3>Americano</h3>
+                    <p>A simple yet robust mix of espresso and hot water, perfect for a lighter coffee experience.</p>
                     <span>$8.99</span>
                 </div>
             </a>
@@ -134,8 +132,8 @@
             <a href="#" class="box">
                 <img src="image/menu-5.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, vitae.</p>
+                    <h3>Mocha</h3>
+                    <p>Indulgent and sweet, our mocha blends espresso, steamed milk, and rich chocolate syrup, topped with whipped cream.</p>
                     <span>$8.99</span>
                 </div>
             </a>
@@ -143,8 +141,8 @@
             <a href="#" class="box">
                 <img src="image/menu-6.png" alt="">
                 <div class="content">
-                    <h3>our special coffee</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, expedita!</p>
+                    <h3>Macchiato</h3>
+                    <p>A flavorful combination of espresso marked with a small amount of frothy steamed milk.</p>
                     <span>$8.99</span>
                 </div>
             </a>
