--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="content">
                     <h3>Espresso</h3>
                     <p>Rich and bold, our espresso is made from finely ground coffee beans brewed under high pressure..</p>
-                    <span>$8.99</span>
+                    <span>280</span>
                 </div>
             </a>
 
@@ -107,7 +107,7 @@
                 <div class="content">
                     <h3>Cappuccino</h3>
                     <p>A classic blend of espresso, steamed milk, and a frothy milk foam topping.</p>
-                    <span>$8.99</span>
+                    <span>280</span>
                 </div>
             </a>
 
@@ -116,7 +116,7 @@
                 <div class="content">
                     <h3>Latte</h3>
                     <p>Smooth and creamy, our latte combines rich espresso with steamed milk and a light layer of foam..</p>
-                    <span>$8.99</span>
+                    <span>280</span>
                 </div>
             </a>
 
@@ -125,7 +125,7 @@
                 <div class="content">
                     <h3>Americano</h3>
                     <p>A simple yet robust mix of espresso and hot water, perfect for a lighter coffee experience.</p>
-                    <span>$8.99</span>
+                    <span>340</span>
                 </div>
             </a>
 
@@ -134,7 +134,7 @@
                 <div class="content">
                     <h3>Mocha</h3>
                     <p>Indulgent and sweet, our mocha blends espresso, steamed milk, and rich chocolate syrup, topped with whipped cream.</p>
-                    <span>$8.99</span>
+                    <span>280</span>
                 </div>
             </a>
 
@@ -143,7 +143,7 @@
                 <div class="content">
                     <h3>Macchiato</h3>
                     <p>A flavorful combination of espresso marked with a small amount of frothy steamed milk.</p>
-                    <span>$8.99</span>
+                    <span>380</span>
                 </div>
             </a>
         </div>
