--- a/index.html
+++ b/index.html
@@ -240,8 +240,15 @@
     <section class="footer">
         <div class="box-container">
             <div class="box">
-                <h3>our branches</h3>
-                <a href="#"><i class="fas fa-arrow-right"></i> SECTOR 7 ZONE 75 MANSAROVAR, GREATER JAIPUR Jaipur JAIPUR</a>              
+                <h3>Address</h3>
+                <a href="#"><i class="fas fa-arrow-right"></i>S 61 S 62 S 11, SECTOR 7 ZONE 75 MANSAROVAR
+                <p>GREATER JAIPUR Jaipur JAIPUR</p>
+                </a>              
+            </div>
+            <div class="box">
+                <h3>Name</h3>
+                <a href="#"><i class="fas fa-arrow-right"></i>ALPHA COFFEE DAY
+                </a>              
             </div>
             <div class="box">
                 <h3>contact info</h3>
