--- a/index.html
+++ b/index.html
@@ -241,15 +241,13 @@
         <div class="box-container">
             <div class="box">
                 <h3>Address</h3>
+                <a href="#"><i class="fas fa-arrow-right"></i>Name: ALPHA COFFEE DAY
+                </a>  
                 <a href="#"><i class="fas fa-arrow-right"></i>S 61 S 62 S 11, SECTOR 7 ZONE 75 MANSAROVAR
                 <p>GREATER JAIPUR Jaipur JAIPUR</p>
                 </a>              
             </div>
-            <div class="box">
-                <h3>Name</h3>
-                <a href="#"><i class="fas fa-arrow-right"></i>ALPHA COFFEE DAY
-                </a>              
-            </div>
+         
             <div class="box">
                 <h3>contact info</h3>
                 <a href="mailto:info@alphacoffee.store"><i class="fas fa-envelope"></i>support@alphacoffee.store</a>
